--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsx index.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,8 @@
     "@types/node": "^22.8.1",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "express": "^4.21.1",
+    "nodemon": "^3.1.7",
     "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
